--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
-    "axios": "^1.3.5",
+    "axios": "^1.4.0",
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
     "react-router-dom": "^6.9.0",
